--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,76 @@
+html {
+  scroll-behavior: smooth;
+}
+
+.header {
+  height: 100vh;
+}
+
+.header > .container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.heading {
+  font-size: 9vw;
+}
+
+.about {
+  margin: 5em 0 0 0;
+  padding: 5em 0 0 0;
+  background-color: rgb(0, 130, 87);
+}
+
 #me {
   height: 45vh;
   border-radius: 50%;
+}
+
+.hello {
+  margin: 10em 0;
+}
+
+.intro {
+  margin: 0 0 5em 0;
+  padding: 3em 0 3em 0;
+  background-color: rgb(0, 255, 170);
+}
+
+.intro-text,
+.education-text {
+  margin: 2em 0 2em 0;
+  font-size: 20px;
+}
+
+.education {
+  margin: 0 0 5em 0;
+  padding: 3em 0 3em 0;
+  background-color: rgb(0, 255, 170);
+}
+
+.tech {
+  margin: 5em 0 0 0;
+  padding: 5em 0;
+  background-color: aquamarine;
+}
+
+.tech > .container > h1 {
+  margin: 0 0 1em 0;
 }
 
 .tools {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  background-color: rgb(177, 255, 229);
+}
+
+.card {
+  margin: 1em;
+  width: 5rem;
 }
 
 .cols {
@@ -16,23 +80,38 @@
 }
 
 .projects {
+  background-color: rgb(110, 250, 255);
+  padding: 5em 0 0 0;
+}
+.project-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  background-color: cadetblue;
+  margin: 5em 0 0 0;
+  padding: 0 0 5em 0;
+}
+
+.contact {
+  margin: 0;
 }
 .links {
-  width: 400px;
+  width: 100%;
   display: flex;
+  margin: 5em 0;
   justify-content: space-evenly;
   align-items: center;
+  background-color: chartreuse;
 }
 
 .media-links {
-  height: 5vh;
+  height: 7vh;
 }
 
 footer {
+  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: cornflowerblue;
 }
